Updated CoxPH experiments.

--- a/meta_analysis/analysis_res_meta.ipynb
+++ b/meta_analysis/analysis_res_meta.ipynb
@@ -344,12 +344,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  dataset = col_character(),\n",
+      "  lr_test_pval = col_double(),\n",
+      "  wald_test_pval = col_double(),\n",
+      "  score_test_pval = col_double()\n",
+      ")\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  gene_pval = col_double(),\n",
+      "  gene_coeff = col_double(),\n",
+      "  gene_qval = col_double(),\n",
+      "  gene_padj = col_double()\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "coxph_null_scores_df <- read_tsv(paste0(dirs$analysis_dir, \"/meta/\", \"coxph_null_scores.tsv\"))\n",
-    "coxph_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_coxph_results.tsv\"))\n",
+    "coxph_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_coxph_results.tsv\"))\n",
     "# filtered_coxph_results_df <- coxph_results_df %>%\n",
     "#     dplyr::filter(gene_pval < p_thresh)\n",
     "filtered_coxph_results_df <- coxph_results_df %>%\n",
@@ -358,18 +380,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A spec_tbl_df: 3 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>dataset</th><th scope=col>lr_test_pval</th><th scope=col>wald_test_pval</th><th scope=col>score_test_pval</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>unified_cervical_data           </td><td>0.0004814013</td><td>0.000049053</td><td>1.224173e-06</td></tr>\n",
+       "\t<tr><td>unified_uterine_data            </td><td>0.3392807906</td><td>0.989893132</td><td>3.053979e-01</td></tr>\n",
+       "\t<tr><td>unified_uterine_endometrial_data</td><td>0.0007739010</td><td>0.000000000</td><td>1.040876e-06</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A spec\\_tbl\\_df: 3 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " dataset & lr\\_test\\_pval & wald\\_test\\_pval & score\\_test\\_pval\\\\\n",
+       " <chr> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t unified\\_cervical\\_data            & 0.0004814013 & 0.000049053 & 1.224173e-06\\\\\n",
+       "\t unified\\_uterine\\_data             & 0.3392807906 & 0.989893132 & 3.053979e-01\\\\\n",
+       "\t unified\\_uterine\\_endometrial\\_data & 0.0007739010 & 0.000000000 & 1.040876e-06\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A spec_tbl_df: 3 × 4\n",
+       "\n",
+       "| dataset &lt;chr&gt; | lr_test_pval &lt;dbl&gt; | wald_test_pval &lt;dbl&gt; | score_test_pval &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| unified_cervical_data            | 0.0004814013 | 0.000049053 | 1.224173e-06 |\n",
+       "| unified_uterine_data             | 0.3392807906 | 0.989893132 | 3.053979e-01 |\n",
+       "| unified_uterine_endometrial_data | 0.0007739010 | 0.000000000 | 1.040876e-06 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  dataset                          lr_test_pval wald_test_pval score_test_pval\n",
+       "1 unified_cervical_data            0.0004814013 0.000049053    1.224173e-06   \n",
+       "2 unified_uterine_data             0.3392807906 0.989893132    3.053979e-01   \n",
+       "3 unified_uterine_endometrial_data 0.0007739010 0.000000000    1.040876e-06   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "coxph_null_scores_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Sig. null Cox PH: TRUE'"
+      ],
+      "text/latex": [
+       "'Sig. null Cox PH: TRUE'"
+      ],
+      "text/markdown": [
+       "'Sig. null Cox PH: TRUE'"
+      ],
+      "text/plain": [
+       "[1] \"Sig. null Cox PH: TRUE\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Sig. Cox PH genes: 55'"
+      ],
+      "text/latex": [
+       "'Sig. Cox PH genes: 55'"
+      ],
+      "text/markdown": [
+       "'Sig. Cox PH genes: 55'"
+      ],
+      "text/plain": [
+       "[1] \"Sig. Cox PH genes: 55\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Prop. sig. Cox PH genes: 0.053554040895813'"
+      ],
+      "text/latex": [
+       "'Prop. sig. Cox PH genes: 0.053554040895813'"
+      ],
+      "text/markdown": [
+       "'Prop. sig. Cox PH genes: 0.053554040895813'"
+      ],
+      "text/plain": [
+       "[1] \"Prop. sig. Cox PH genes: 0.053554040895813\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Sig. Cox PH protective: 15'"
+      ],
+      "text/latex": [
+       "'Sig. Cox PH protective: 15'"
+      ],
+      "text/markdown": [
+       "'Sig. Cox PH protective: 15'"
+      ],
+      "text/plain": [
+       "[1] \"Sig. Cox PH protective: 15\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Sig. Cox PH harmful: 40'"
+      ],
+      "text/latex": [
+       "'Sig. Cox PH harmful: 40'"
+      ],
+      "text/markdown": [
+       "'Sig. Cox PH harmful: 40'"
+      ],
+      "text/plain": [
+       "[1] \"Sig. Cox PH harmful: 40\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "coxph_null_sig <- (coxph_null_scores_df %>% dplyr::filter(dataset == unified_dsets[dset_idx]))$lr_test_pval < p_thresh\n",
     "n_coxph_sig <- nrow(filtered_coxph_results_df)\n",
@@ -405,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
