--- a/meta_analysis/analysis_res_meta.ipynb
+++ b/meta_analysis/analysis_res_meta.ipynb
@@ -806,11 +806,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  MI_est_median = col_double()\n",
+      ")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "'MI: 506'"
+      ],
+      "text/latex": [
+       "'MI: 506'"
+      ],
+      "text/markdown": [
+       "'MI: 506'"
+      ],
+      "text/plain": [
+       "[1] \"MI: 506\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "mi_figo_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_MI_figo_results.tsv\"))\n",
+    "mi_figo_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_MI_figo_results.tsv\"))\n",
     "filtered_mi_figo_results_df <- mi_figo_results_df %>% dplyr::filter(MI_est_median > mi_thresh)\n",
     "\n",
     "n_mi <- nrow(filtered_mi_figo_results_df)\n",
