--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -105,7 +105,12 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
