Gene lists updated.

--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 1"
+    "dset_idx <- 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -104,13 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -196,16 +191,16 @@
     }
    ],
    "source": [
-    "dge_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_DESeq_results.tsv\"))\n",
-    "lr_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_l1_lr_results.tsv\"))\n",
-    "anova_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_welch_anova_results.tsv\"))\n",
+    "dge_df <- read_tsv(paste0(dirs$analysis_dir, \"/deg/\", unified_dsets[dset_idx], \"_DESeq_results.tsv\"))\n",
+    "lr_df <- read_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_l1_lr_results.tsv\"))\n",
+    "anova_df <- read_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_welch_anova_results.tsv\"))\n",
     "network_mm_gs_df <- read_tsv(paste0(dirs$analysis_dir, \"/network/\", unified_dsets[dset_idx], \"_gene_mm_gs.tsv\"))\n",
     "network_me_sig_df <- read_tsv(paste0(dirs$analysis_dir, \"/network/\", unified_dsets[dset_idx], \"_eigengene_traits.tsv\"))\n",
     "condensed_me_df <- network_me_sig_df %>%\n",
     "    condense_figo(include_pvals = TRUE) %>%\n",
     "    dplyr::rename_if(!startsWith(colnames(.), \"module\"), ~ gsub(\"^\", \"me_\", .))\n",
-    "coxph_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_coxph_results.tsv\"))\n",
-    "cor_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_cor_results.tsv\"))"
+    "coxph_df <- read_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_coxph_results.tsv\"))\n",
+    "cor_df <- read_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_cor_results.tsv\"))"
    ]
   },
   {
@@ -217,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
