--- a/one_off/gen_samples.ipynb
+++ b/one_off/gen_samples.ipynb
@@ -2,16 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,18 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tumor & Normal should not have any pared data\n",
+    "# Remove adjacent to tumor samples\n",
     "filt_cerv_normal_df <- cerv_normal_df %>%\n",
-    "    dplyr::filter(!(subject_id %in% cesc_tumor_samp_df$subject_id))"
+    "    dplyr::filter(!(subject_id %in% cesc_tumor_samp_df$subject_id)) %>%\n",
+    "    dplyr::filter(clinicaldiag_description != \"Normal Adjacent to Tumor\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,17 +314,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "filt_u_normal_df <- ut_endo_normal_df %>%\n",
-    "    dplyr::filter(!(subject_id %in% ucec_tumor_samp_df$subject_id) & !(subject_id %in% ucs_tumor_samp_df$subject_id))"
+    "    dplyr::filter(!(subject_id %in% ucec_tumor_samp_df$subject_id) & !(subject_id %in% ucs_tumor_samp_df$subject_id)) %>%\n",
+    "    dplyr::filter(clinicaldiag_description != \"Normal Adjacent to Tumor\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -402,22 +420,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "1999"
+       "1998"
       ],
       "text/latex": [
-       "1999"
+       "1998"
       ],
       "text/markdown": [
-       "1999"
+       "1998"
       ],
       "text/plain": [
-       "[1] 1999"
+       "[1] 1998"
       ]
      },
      "metadata": {},
@@ -426,16 +444,16 @@
     {
      "data": {
       "text/html": [
-       "2010"
+       "2012"
       ],
       "text/latex": [
-       "2010"
+       "2012"
       ],
       "text/markdown": [
-       "2010"
+       "2012"
       ],
       "text/plain": [
-       "[1] 2010"
+       "[1] 2012"
       ]
      },
      "metadata": {},
@@ -456,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,20 +485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_csv(cesc_normal_samp_df, paste0(root_path, \"/to_purchase/cesc_normal.csv\"))\n",
     "write_csv(u_normal_samp_df, paste0(root_path, \"/to_purchase/u_normal.csv\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
