--- a/network_analysis/relate_modules_to_traits_3.ipynb
+++ b/network_analysis/relate_modules_to_traits_3.ipynb
@@ -2,15 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m -------------------------------------------------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ----------------------------------------------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Loading required package: dynamicTreeCut\n",
+      "\n",
+      "Loading required package: fastcluster\n",
+      "\n",
+      "\n",
+      "Attaching package: 'fastcluster'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    hclust\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'WGCNA'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    cor\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'matrixStats'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:dplyr':\n",
+      "\n",
+      "    count\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(WGCNA)\n",
     "library(cowplot)\n",
     "library(matrixStats)\n",
-    "library(qvalue)\n",
     "\n",
     "# Custom package\n",
     "library(rutils)"
@@ -18,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,33 +185,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "“Loglik converged before variable  1 ; coefficient may be infinite. ”"
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n"
      ]
     }
    ],
@@ -187,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -446,10 +509,15 @@
      "output_type": "stream",
      "text": [
       "`geom_smooth()` using formula 'y ~ x'\n",
+      "\n",
       "`geom_smooth()` using formula 'y ~ x'\n",
+      "\n",
       "`geom_smooth()` using formula 'y ~ x'\n",
+      "\n",
       "`geom_smooth()` using formula 'y ~ x'\n",
-      "`geom_smooth()` using formula 'y ~ x'\n"
+      "\n",
+      "`geom_smooth()` using formula 'y ~ x'\n",
+      "\n"
      ]
     }
    ],
@@ -481,7 +549,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.0.3"
   }
  },
  "nbformat": 4,
