--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -2,70 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m -------------------------------------------------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
-      "\n",
-      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "-- \u001b[1mConflicts\u001b[22m ----------------------------------------------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "\n",
-      "\n",
-      "clusterProfiler v3.18.0  For help: https://guangchuangyu.github.io/software/clusterProfiler\n",
-      "\n",
-      "If you use clusterProfiler in published research, please cite:\n",
-      "Guangchuang Yu, Li-Gen Wang, Yanyan Han, Qing-Yu He. clusterProfiler: an R package for comparing biological themes among gene clusters. OMICS: A Journal of Integrative Biology. 2012, 16(5):284-287.\n",
-      "\n",
-      "\n",
-      "Attaching package: 'clusterProfiler'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:purrr':\n",
-      "\n",
-      "    simplify\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    filter\n",
-      "\n",
-      "\n",
-      "Loading required package: dynamicTreeCut\n",
-      "\n",
-      "Loading required package: fastcluster\n",
-      "\n",
-      "\n",
-      "Attaching package: 'fastcluster'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    hclust\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: 'WGCNA'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    cor\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(clusterProfiler)\n",
@@ -78,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,12 +57,13 @@
     "pval_thresh <- 0.05\n",
     "perm_thresh <- 0\n",
     "vote_thresh <- 5\n",
-    "hub_con_thresh <- 0.5"
+    "# hub_con_thresh <- 0.5\n",
+    "hub_con_thresh <- 0.25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -476,16 +416,16 @@
     {
      "data": {
       "text/html": [
-       "154"
+       "195"
       ],
       "text/latex": [
-       "154"
+       "195"
       ],
       "text/markdown": [
-       "154"
+       "195"
       ],
       "text/plain": [
-       "[1] 154"
+       "[1] 195"
       ]
      },
      "metadata": {},
@@ -498,6 +438,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "univar_figo_list <- filtered_lr_df$geneID %>% \n",
+    "    union(filtered_anova_df$geneID) %>%\n",
+    "    union(filtered_mi_figo_df$geneID)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -506,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -684,16 +635,16 @@
     {
      "data": {
       "text/html": [
-       "154"
+       "195"
       ],
       "text/latex": [
-       "154"
+       "195"
       ],
       "text/markdown": [
-       "154"
+       "195"
       ],
       "text/plain": [
-       "[1] 154"
+       "[1] 195"
       ]
      },
      "metadata": {},
@@ -708,126 +659,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "univar_gene_list <- filtered_lr_df$geneID %>% \n",
-    "    union(filtered_anova_df$geneID) %>%\n",
-    "    union(filtered_mi_figo_df$geneID)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "618"
-      ],
-      "text/latex": [
-       "618"
-      ],
-      "text/markdown": [
-       "618"
-      ],
-      "text/plain": [
-       "[1] 618"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "135"
-      ],
-      "text/latex": [
-       "135"
-      ],
-      "text/markdown": [
-       "135"
-      ],
-      "text/plain": [
-       "[1] 135"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "21"
-      ],
-      "text/latex": [
-       "21"
-      ],
-      "text/markdown": [
-       "21"
-      ],
-      "text/plain": [
-       "[1] 21"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "82"
-      ],
-      "text/latex": [
-       "82"
-      ],
-      "text/markdown": [
-       "82"
-      ],
-      "text/plain": [
-       "[1] 82"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "2"
-      ],
-      "text/latex": [
-       "2"
-      ],
-      "text/markdown": [
-       "2"
-      ],
-      "text/plain": [
-       "[1] 2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "length(dge_m_geneIDs)\n",
-    "length(univar_gene_list)\n",
-    "length(filtered_figo_network_df$geneID)\n",
-    "\n",
-    "length(univar_gene_list %>%\n",
-    "    intersect(dge_m_geneIDs))\n",
-    "\n",
-    "length(filtered_figo_network_df$geneID %>%\n",
-    "    intersect(univar_gene_list) %>%\n",
-    "    intersect(dge_m_geneIDs))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -836,24 +667,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_lines(dge_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_dge_gene_list.txt\"))\n",
     "write_lines(dge_m_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_dge_m_gene_list.txt\"))\n",
-    "write_lines(figo_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_gene_list.txt\"))\n",
-    "write_lines(survival_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_gene_list.txt\"))"
+    "write_lines(figo_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
+    "write_lines(survival_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_lines(filtered_figo_network_df$geneID, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_network_gene_list.txt\"))\n",
-    "write_lines(univar_gene_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_univar_gene_list.txt\"))"
+    "write_lines(filtered_figo_network_df$geneID, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_network_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
+    "write_lines(univar_figo_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_univar_gene_list.txt\"))"
    ]
   },
   {
