All figure generation moved to one location.

--- a/network_analysis/relate_modules_to_traits_3.ipynb
+++ b/network_analysis/relate_modules_to_traits_3.ipynb
@@ -468,12 +468,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pivot_mm_gs_df <- joined_mm_gs_df %>%\n",
-    "    dplyr::select(-one_of(colnames(gene_figo_pval_df)[-1], \"vital_pval\", \"vital_qval\", \"vital_hr\")) %>%\n",
-    "    pivot_longer(cols = colnames(gene_mm_df)[-1], names_to = \"module_cor\", values_to = \"module_cor_val\") %>%\n",
-    "    pivot_longer(cols = c(colnames(gene_figo_df)[-1], \"vital_dev_cor\"), names_to = \"trait_cor\", values_to = \"trait_cor_val\") %>%\n",
-    "    pivot_longer(cols = colnames(gene_mm_pval_df)[-1], names_to = \"module_pval\", values_to = \"module_pval_val\") %>%\n",
-    "    dplyr::filter(startsWith(module_cor, module), startsWith(module_pval, module))"
+    "# pivot_mm_gs_df <- joined_mm_gs_df %>%\n",
+    "#     dplyr::select(-one_of(colnames(gene_figo_pval_df)[-1], \"vital_pval\", \"vital_qval\", \"vital_hr\")) %>%\n",
+    "#     pivot_longer(cols = colnames(gene_mm_df)[-1], names_to = \"module_cor\", values_to = \"module_cor_val\") %>%\n",
+    "#     pivot_longer(cols = c(colnames(gene_figo_df)[-1], \"vital_dev_cor\"), names_to = \"trait_cor\", values_to = \"trait_cor_val\") %>%\n",
+    "#     pivot_longer(cols = colnames(gene_mm_pval_df)[-1], names_to = \"module_pval\", values_to = \"module_pval_val\") %>%\n",
+    "#     dplyr::filter(startsWith(module_cor, module), startsWith(module_pval, module))"
    ]
   },
   {
@@ -482,21 +482,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "axis_scale <- function(x, d) {\n",
-    "    sprintf(paste0(\"%.\", d, \"f\"), x)\n",
-    "}\n",
+    "# axis_scale <- function(x, d) {\n",
+    "#     sprintf(paste0(\"%.\", d, \"f\"), x)\n",
+    "# }\n",
     "\n",
-    "facet_plot <- function(pivot_df, trait_str, module_pval_thresh = 0.05, module_cor_pval_thresh = 0.0000) {\n",
-    "    plt <- ggplot(pivot_df %>% dplyr::filter(trait_cor == paste0(trait_str, \"_cor\"))) +\n",
-    "        geom_point(aes(x = abs(module_cor_val), y = abs(trait_cor_val), color = (module_pval_val < module_pval_thresh) & (abs(module_cor_val) > module_cor_pval_thresh))) +\n",
-    "        geom_smooth(aes(x = abs(module_cor_val), y = abs(trait_cor_val)), method = \"lm\", color = \"black\") +\n",
-    "        facet_wrap(~ module, ncol = 3) +\n",
-    "        theme_classic() +\n",
-    "        labs(color = \"Sig. in module\", x = \"gene abs(ME cor.)\", y = paste0(\"gene abs(\", gsub(\"_\", \" \", trait_str), \" cor.)\")) +\n",
-    "        scale_x_continuous(labels = function(x) { axis_scale(x, 2) }) +\n",
-    "        scale_y_continuous(labels = function(x) { axis_scale(x, 2) })\n",
-    "    return(plt)\n",
-    "}"
+    "# facet_plot <- function(pivot_df, trait_str, module_pval_thresh = 0.05, module_cor_pval_thresh = 0.0000) {\n",
+    "#     plt <- ggplot(pivot_df %>% dplyr::filter(trait_cor == paste0(trait_str, \"_cor\"))) +\n",
+    "#         geom_point(aes(x = abs(module_cor_val), y = abs(trait_cor_val), color = (module_pval_val < module_pval_thresh) & (abs(module_cor_val) > module_cor_pval_thresh))) +\n",
+    "#         geom_smooth(aes(x = abs(module_cor_val), y = abs(trait_cor_val)), method = \"lm\", color = \"black\") +\n",
+    "#         facet_wrap(~ module, ncol = 3) +\n",
+    "#         theme_classic() +\n",
+    "#         labs(color = \"Sig. in module\", x = \"gene abs(ME cor.)\", y = paste0(\"gene abs(\", gsub(\"_\", \" \", trait_str), \" cor.)\")) +\n",
+    "#         scale_x_continuous(labels = function(x) { axis_scale(x, 2) }) +\n",
+    "#         scale_y_continuous(labels = function(x) { axis_scale(x, 2) })\n",
+    "#     return(plt)\n",
+    "# }"
    ]
   },
   {
@@ -522,11 +522,11 @@
     }
    ],
    "source": [
-    "trait_strs <- c(\"vital_dev\", \"figo_stage_1\", \"figo_stage_2\", \"figo_stage_3\", \"figo_stage_4\")\n",
-    "for (ts in trait_strs) {\n",
-    "    facet_plot(pivot_mm_gs_df, ts)\n",
-    "    ggsave(filename = paste0(dirs$figures_dir, \"/network/\", unified_dsets[dset_idx], \"_module_\", ts, \"_facet.png\"), height = 10, width = 10)\n",
-    "}\n"
+    "# trait_strs <- c(\"vital_dev\", \"figo_stage_1\", \"figo_stage_2\", \"figo_stage_3\", \"figo_stage_4\")\n",
+    "# for (ts in trait_strs) {\n",
+    "#     facet_plot(pivot_mm_gs_df, ts)\n",
+    "#     ggsave(filename = paste0(dirs$figures_dir, \"/network/\", unified_dsets[dset_idx], \"_module_\", ts, \"_facet.png\"), height = 10, width = 10)\n",
+    "# }\n"
    ]
   },
   {
