--- a/figures/TCGA_overview.ipynb
+++ b/figures/TCGA_overview.ipynb
@@ -3,128 +3,161 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
-      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
-      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
       "Loading required package: S4Vectors\n",
+      "\n",
       "Loading required package: stats4\n",
+      "\n",
       "Loading required package: BiocGenerics\n",
+      "\n",
       "Loading required package: parallel\n",
       "\n",
-      "Attaching package: ‘BiocGenerics’\n",
       "\n",
-      "The following objects are masked from ‘package:parallel’:\n",
+      "Attaching package: 'BiocGenerics'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:parallel':\n",
       "\n",
       "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
       "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
       "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
       "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "The following objects are masked from 'package:dplyr':\n",
       "\n",
       "    combine, intersect, setdiff, union\n",
       "\n",
-      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
       "\n",
       "    IQR, mad, sd, var, xtabs\n",
       "\n",
-      "The following objects are masked from ‘package:base’:\n",
       "\n",
-      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
-      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
-      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
-      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
-      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
-      "    union, unique, unsplit, which, which.max, which.min\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    Filter, Find, Map, Position, Reduce, anyDuplicated, append,\n",
+      "    as.data.frame, basename, cbind, colnames, dirname, do.call,\n",
+      "    duplicated, eval, evalq, get, grep, grepl, intersect, is.unsorted,\n",
+      "    lapply, mapply, match, mget, order, paste, pmax, pmax.int, pmin,\n",
+      "    pmin.int, rank, rbind, rownames, sapply, setdiff, sort, table,\n",
+      "    tapply, union, unique, unsplit, which.max, which.min\n",
       "\n",
       "\n",
-      "Attaching package: ‘S4Vectors’\n",
       "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
+      "Attaching package: 'S4Vectors'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:dplyr':\n",
       "\n",
       "    first, rename\n",
       "\n",
-      "The following object is masked from ‘package:tidyr’:\n",
+      "\n",
+      "The following object is masked from 'package:tidyr':\n",
       "\n",
       "    expand\n",
       "\n",
-      "The following object is masked from ‘package:base’:\n",
+      "\n",
+      "The following object is masked from 'package:base':\n",
       "\n",
       "    expand.grid\n",
       "\n",
+      "\n",
       "Loading required package: IRanges\n",
       "\n",
-      "Attaching package: ‘IRanges’\n",
       "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
+      "Attaching package: 'IRanges'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:dplyr':\n",
       "\n",
       "    collapse, desc, slice\n",
       "\n",
-      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "The following object is masked from 'package:purrr':\n",
       "\n",
       "    reduce\n",
       "\n",
+      "\n",
       "Loading required package: GenomicRanges\n",
+      "\n",
       "Loading required package: GenomeInfoDb\n",
+      "\n",
       "Loading required package: SummarizedExperiment\n",
+      "\n",
+      "Loading required package: MatrixGenerics\n",
+      "\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "\n",
+      "Attaching package: 'matrixStats'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:dplyr':\n",
+      "\n",
+      "    count\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'MatrixGenerics'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:matrixStats':\n",
+      "\n",
+      "    colAlls, colAnyNAs, colAnys, colAvgsPerRowSet, colCollapse,\n",
+      "    colCounts, colCummaxs, colCummins, colCumprods, colCumsums,\n",
+      "    colDiffs, colIQRDiffs, colIQRs, colLogSumExps, colMadDiffs,\n",
+      "    colMads, colMaxs, colMeans2, colMedians, colMins, colOrderStats,\n",
+      "    colProds, colQuantiles, colRanges, colRanks, colSdDiffs, colSds,\n",
+      "    colSums2, colTabulates, colVarDiffs, colVars, colWeightedMads,\n",
+      "    colWeightedMeans, colWeightedMedians, colWeightedSds,\n",
+      "    colWeightedVars, rowAlls, rowAnyNAs, rowAnys, rowAvgsPerColSet,\n",
+      "    rowCollapse, rowCounts, rowCummaxs, rowCummins, rowCumprods,\n",
+      "    rowCumsums, rowDiffs, rowIQRDiffs, rowIQRs, rowLogSumExps,\n",
+      "    rowMadDiffs, rowMads, rowMaxs, rowMeans2, rowMedians, rowMins,\n",
+      "    rowOrderStats, rowProds, rowQuantiles, rowRanges, rowRanks,\n",
+      "    rowSdDiffs, rowSds, rowSums2, rowTabulates, rowVarDiffs, rowVars,\n",
+      "    rowWeightedMads, rowWeightedMeans, rowWeightedMedians,\n",
+      "    rowWeightedSds, rowWeightedVars\n",
+      "\n",
+      "\n",
       "Loading required package: Biobase\n",
+      "\n",
       "Welcome to Bioconductor\n",
       "\n",
       "    Vignettes contain introductory material; view with\n",
       "    'browseVignettes()'. To cite Bioconductor, see\n",
       "    'citation(\"Biobase\")', and for packages 'citation(\"pkgname\")'.\n",
       "\n",
-      "Loading required package: DelayedArray\n",
-      "Loading required package: matrixStats\n",
       "\n",
-      "Attaching package: ‘matrixStats’\n",
       "\n",
-      "The following objects are masked from ‘package:Biobase’:\n",
+      "Attaching package: 'Biobase'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:MatrixGenerics':\n",
+      "\n",
+      "    rowMedians\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:matrixStats':\n",
       "\n",
       "    anyMissing, rowMedians\n",
       "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    count\n",
-      "\n",
-      "Loading required package: BiocParallel\n",
-      "\n",
-      "Attaching package: ‘DelayedArray’\n",
-      "\n",
-      "The following objects are masked from ‘package:matrixStats’:\n",
-      "\n",
-      "    colMaxs, colMins, colRanges, rowMaxs, rowMins, rowRanges\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    simplify\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    aperm, apply, rowsum\n",
-      "\n",
-      "\n",
-      "********************************************************\n",
-      "Note: As of version 1.0.0, cowplot does not change the\n",
-      "  default ggplot2 theme anymore. To recover the previous\n",
-      "  behavior, execute:\n",
-      "  theme_set(theme_cowplot())\n",
-      "********************************************************\n",
       "\n"
      ]
     }
@@ -181,19 +214,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsed with column specification:\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
-      "  sample_name = col_character(),\n",
-      "  condition = col_character(),\n",
-      "  project = col_character()\n",
+      "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  condition = \u001b[31mcol_character()\u001b[39m,\n",
+      "  project = \u001b[31mcol_character()\u001b[39m\n",
       ")\n",
-      "Parsed with column specification:\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
-      "  ensembl_gene_id = col_character(),\n",
-      "  external_gene_name = col_character()\n",
+      "  ensembl_gene_id = \u001b[31mcol_character()\u001b[39m,\n",
+      "  external_gene_name = \u001b[31mcol_character()\u001b[39m\n",
       ")\n",
-      "See spec(...) for full column specifications.\n"
+      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m for the full column specifications.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -215,19 +254,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsed with column specification:\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
-      "  sample_name = col_character(),\n",
-      "  condition = col_character(),\n",
-      "  project = col_character()\n",
+      "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  condition = \u001b[31mcol_character()\u001b[39m,\n",
+      "  project = \u001b[31mcol_character()\u001b[39m\n",
       ")\n",
-      "Parsed with column specification:\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
-      "  ensembl_gene_id = col_character(),\n",
-      "  external_gene_name = col_character()\n",
+      "  ensembl_gene_id = \u001b[31mcol_character()\u001b[39m,\n",
+      "  external_gene_name = \u001b[31mcol_character()\u001b[39m\n",
       ")\n",
-      "See spec(...) for full column specifications.\n"
+      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m for the full column specifications.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -436,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +510,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
      "output_type": "display_data"
     },
     {
@@ -494,7 +544,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
      "output_type": "display_data"
     }
    ],
@@ -539,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,14 +604,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving 6.67 x 6.67 in image\n"
+      "Saving 6.67 x 6.67 in image\n",
+      "\n"
      ]
     },
     {
@@ -566,7 +622,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
      "output_type": "display_data"
     }
    ],
@@ -589,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +660,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
      "output_type": "display_data"
     },
     {
@@ -609,7 +675,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
      "output_type": "display_data"
     }
    ],
@@ -639,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,14 +722,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving 6.67 x 6.67 in image\n"
+      "Saving 6.67 x 6.67 in image\n",
+      "\n"
      ]
     },
     {
@@ -668,7 +740,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
      "output_type": "display_data"
     }
    ],
@@ -706,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,14 +793,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving 6.67 x 6.67 in image\n"
+      "Saving 6.67 x 6.67 in image\n",
+      "\n"
      ]
     },
     {
@@ -733,7 +811,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
      "output_type": "display_data"
     }
    ],
@@ -752,14 +835,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saving 6.67 x 6.67 in image\n"
+      "Saving 6.67 x 6.67 in image\n",
+      "\n"
      ]
     },
     {
@@ -769,7 +853,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
      "output_type": "display_data"
     }
    ],
@@ -810,7 +899,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.0.3"
   }
  },
  "nbformat": 4,
