Did some simple analysis of gene lists.

--- a/meta_analysis/inter_cancer_overlap.ipynb
+++ b/meta_analysis/inter_cancer_overlap.ipynb
@@ -2,15 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "multiple-imagination",
+   "execution_count": 8,
+   "id": "disciplinary-modeling",
    "metadata": {},
    "outputs": [],
    "source": [
     "library(tidyverse)\n",
-    "library(clusterProfiler)\n",
-    "library(WGCNA)\n",
-    "library(parallel)\n",
     "\n",
     "# Custom package\n",
     "library(rutils)"
@@ -18,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "bored-comparison",
+   "execution_count": 9,
+   "id": "dense-trouble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "injured-memphis",
+   "execution_count": 10,
+   "id": "quarterly-humanitarian",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hub_con_thresh <- 0.5\n",
-    "hub_con_thresh <- 0.25"
+    "hub_con_thresh <- 0.5\n",
+    "# hub_con_thresh <- 0.25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "equivalent-content",
+   "execution_count": 11,
+   "id": "unknown-visibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "arranged-enhancement",
+   "execution_count": 12,
+   "id": "undefined-death",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "accomplished-breath",
+   "execution_count": 13,
+   "id": "accessory-palestine",
    "metadata": {},
    "outputs": [
     {
@@ -114,16 +111,16 @@
     {
      "data": {
       "text/html": [
-       "4"
+       "0"
       ],
       "text/latex": [
-       "4"
+       "0"
       ],
       "text/markdown": [
-       "4"
+       "0"
       ],
       "text/plain": [
-       "[1] 4"
+       "[1] 0"
       ]
      },
      "metadata": {},
@@ -142,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "standard-quantity",
+   "execution_count": 14,
+   "id": "buried-found",
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_lines(demg_intersection, paste0(dirs$analysis_dir, \"/gene_lists/all_cancer_demg_intersection_gene_list.txt\"))\n",
-    "write_lines(univar_figo_intersection, paste0(dirs$analysis_dir, \"/gene_lists/all_cancer_figo_univar_gene_list.txt\"))\n",
-    "write_lines(network_figo_intersection, paste0(dirs$analysis_dir, \"/gene_lists/all_cancer_figo_network_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))"
+    "write_lines(demg_intersection, paste0(dirs$analysis_dir, \"/gene_lists/all_cancer_demg_overlap_gene_list.txt\"))\n",
+    "write_lines(univar_figo_intersection, paste0(dirs$analysis_dir, \"/gene_lists/all_cancer_figo_univar_overlap_gene_list.txt\"))\n",
+    "write_lines(network_figo_intersection, paste0(dirs$analysis_dir, \"/gene_lists/all_cancer_figo_network_hub_thresh_\", hub_con_thresh, \"_overlap_gene_list.txt\"))"
    ]
   }
  ],
