--- a/meta_analysis/intra_cancer_overlap.ipynb
+++ b/meta_analysis/intra_cancer_overlap.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "exclusive-superintendent",
+   "execution_count": 1,
+   "id": "flush-patio",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "\n",
@@ -15,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "precious-appeal",
+   "execution_count": 2,
+   "id": "monthly-product",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,20 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "unavailable-finance",
+   "execution_count": 3,
+   "id": "returning-collector",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3\n",
+    "dset_idx <- 1\n",
     "# hub_con_thresh <- 0.5\n",
     "hub_con_thresh <- 0.25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "dependent-education",
+   "execution_count": 4,
+   "id": "dietary-bowling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "serious-muslim",
+   "execution_count": 5,
+   "id": "fundamental-probability",
    "metadata": {},
    "outputs": [
     {
@@ -65,32 +83,41 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'LOXL3'</li><li>'LGI2'</li><li>'WNT10A'</li><li>'PAPPA2'</li><li>'ANGPT4'</li><li>'RSPO3'</li><li>'FGF12'</li></ol>\n"
+       "<ol class=list-inline><li>'MUC13'</li><li>'CXCL2'</li><li>'SEMA6C'</li><li>'S100A11'</li><li>'MUC6'</li><li>'A2ML1'</li><li>'ADAMTS18'</li><li>'SERPINB5'</li><li>'MMP28'</li><li>'CSTB'</li><li>'LGALS7'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 'LOXL3'\n",
-       "\\item 'LGI2'\n",
-       "\\item 'WNT10A'\n",
-       "\\item 'PAPPA2'\n",
-       "\\item 'ANGPT4'\n",
-       "\\item 'RSPO3'\n",
-       "\\item 'FGF12'\n",
+       "\\item 'MUC13'\n",
+       "\\item 'CXCL2'\n",
+       "\\item 'SEMA6C'\n",
+       "\\item 'S100A11'\n",
+       "\\item 'MUC6'\n",
+       "\\item 'A2ML1'\n",
+       "\\item 'ADAMTS18'\n",
+       "\\item 'SERPINB5'\n",
+       "\\item 'MMP28'\n",
+       "\\item 'CSTB'\n",
+       "\\item 'LGALS7'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 'LOXL3'\n",
-       "2. 'LGI2'\n",
-       "3. 'WNT10A'\n",
-       "4. 'PAPPA2'\n",
-       "5. 'ANGPT4'\n",
-       "6. 'RSPO3'\n",
-       "7. 'FGF12'\n",
+       "1. 'MUC13'\n",
+       "2. 'CXCL2'\n",
+       "3. 'SEMA6C'\n",
+       "4. 'S100A11'\n",
+       "5. 'MUC6'\n",
+       "6. 'A2ML1'\n",
+       "7. 'ADAMTS18'\n",
+       "8. 'SERPINB5'\n",
+       "9. 'MMP28'\n",
+       "10. 'CSTB'\n",
+       "11. 'LGALS7'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] \"LOXL3\"  \"LGI2\"   \"WNT10A\" \"PAPPA2\" \"ANGPT4\" \"RSPO3\"  \"FGF12\" "
+       " [1] \"MUC13\"    \"CXCL2\"    \"SEMA6C\"   \"S100A11\"  \"MUC6\"     \"A2ML1\"   \n",
+       " [7] \"ADAMTS18\" \"SERPINB5\" \"MMP28\"    \"CSTB\"     \"LGALS7\"  "
       ]
      },
      "metadata": {},
@@ -99,16 +126,16 @@
     {
      "data": {
       "text/html": [
-       "7"
+       "11"
       ],
       "text/latex": [
-       "7"
+       "11"
       ],
       "text/markdown": [
-       "7"
+       "11"
       ],
       "text/plain": [
-       "[1] 7"
+       "[1] 11"
       ]
      },
      "metadata": {},
@@ -125,23 +152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "distant-female",
+   "execution_count": 6,
+   "id": "light-disposition",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "618"
+       "593"
       ],
       "text/latex": [
-       "618"
+       "593"
       ],
       "text/markdown": [
-       "618"
+       "593"
       ],
       "text/plain": [
-       "[1] 618"
+       "[1] 593"
       ]
      },
      "metadata": {},
@@ -150,16 +177,16 @@
     {
      "data": {
       "text/html": [
-       "135"
+       "239"
       ],
       "text/latex": [
-       "135"
+       "239"
       ],
       "text/markdown": [
-       "135"
+       "239"
       ],
       "text/plain": [
-       "[1] 135"
+       "[1] 239"
       ]
      },
      "metadata": {},
@@ -168,16 +195,16 @@
     {
      "data": {
       "text/html": [
-       "71"
+       "129"
       ],
       "text/latex": [
-       "71"
+       "129"
       ],
       "text/markdown": [
-       "71"
+       "129"
       ],
       "text/plain": [
-       "[1] 71"
+       "[1] 129"
       ]
      },
      "metadata": {},
@@ -186,16 +213,16 @@
     {
      "data": {
       "text/html": [
-       "7"
+       "11"
       ],
       "text/latex": [
-       "7"
+       "11"
       ],
       "text/markdown": [
-       "7"
+       "11"
       ],
       "text/plain": [
-       "[1] 7"
+       "[1] 11"
       ]
      },
      "metadata": {},
@@ -218,8 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "collective-temple",
+   "execution_count": 7,
+   "id": "induced-found",
    "metadata": {},
    "outputs": [],
    "source": [
